--- a/spec/datetimeformat.html
+++ b/spec/datetimeformat.html
@@ -66,7 +66,7 @@
         <tr>
           <td>[[FractionalSecondDigits]]</td>
           <td>`"fractionalSecondDigits"`</td>
-          <td>`0`, `1`, `2`, `3`</td>
+          <td>`1`, `2`, `3`</td>
         </tr>
       </table>
     </emu-table>
@@ -109,7 +109,7 @@
         1. For each row of <emu-xref href="#table-datetimeformat-components"></emu-xref>, except the header row, in table order, do
           1. Let _prop_ be the name given in the Property column of the row.
           1. If _prop_ is `"fractionalSecondDigits"`, then
-            1. Let _value_ be ? GetNumberOption(options, "fractionalSecondDigits", 0, 3, 0).
+            1. Let _value_ be ? GetNumberOption(options, "fractionalSecondDigits", 1, 3, *undefined*).
           1. Else, 
             1. Let _value_ be ? GetOption(_options_, _prop_, `"string"`, &laquo; the strings given in the Values column of the row &raquo;, *undefined*).
           1. Set _opt_.[[&lt;_prop_&gt;]] to _value_.
@@ -208,11 +208,11 @@
           1. For each _property_ shown in <emu-xref href="#table-datetimeformat-components"></emu-xref>, do
             1. Let _optionsProp_ be _options_.[[&lt;_property_&gt;]].
             1. Let _formatProp_ be _format_.[[&lt;_property_&gt;]].
-            1. If _optionsProp_ is *undefined* and _formatProp_ is not *undefined* and _formatProp_ is not `0`, then decrease _score_ by _additionPenalty_.
-            1. Else if _optionsProp_ is not *undefined* and _optionsProp_ is not `0` and _formatProp_ is *undefined*, then decrease _score_ by _removalPenalty_.
+            1. If _optionsProp_ is *undefined* and _formatProp_ is not *undefined*, then decrease _score_ by _additionPenalty_.
+            1. Else if _optionsProp_ is not *undefined* and _formatProp_ is *undefined*, then decrease _score_ by _removalPenalty_.
             1. Else if _optionsProp_ ≠ _formatProp_,
               1. If _property_ is `"fractionalSecondDigits"`, then
-                1. Let _values_ be &laquo; `0`, `1`, `2`, `3` &raquo;.
+                1. Let _values_ be &laquo; `1`, `2`, `3` &raquo;.
               1. Else, 
                 1. Let _values_ be &laquo; `"2-digit"`, `"numeric"`, `"narrow"`, `"short"`, `"long"` &raquo;.
               1. Let _optionsPropIndex_ be the index of _optionsProp_ within _values_.
@@ -761,7 +761,7 @@
       <li>[[NumberingSystem]] is a String value with the `"type"` given in Unicode Technical Standard 35 for the numbering system used for formatting.</li>
       <li>[[TimeZone]] is a String value with the IANA time zone name of the time zone used for formatting.</li>
       <li>[[Weekday]], [[Era]], [[Year]], [[Month]], [[Day]], [[Hour]], [[Minute]], [[Second]], [[TimeZoneName]] are each either *undefined*, indicating that the component is not used for formatting, or one of the String values given in <emu-xref href="#table-datetimeformat-components"></emu-xref>, indicating how the component should be presented in the formatted output.</li>
-      <li>[[FractionalSecondDigits]] is either *undefined* or a non-negative integer Number value indicating the fraction digits to be used for fractional second. Numbers will be rounded or padded with trailing zeroes if necessary. </li>
+      <li>[[FractionalSecondDigits]] is either *undefined* or a positive, non-negative integer Number value indicating the fraction digits to be used for fractional second. Numbers will be rounded or padded with trailing zeroes if necessary. </li>
       <li>[[HourCycle]] is a String value indicating whether the 12-hour format (`"h11"`, `"h12"`) or the 24-hour format (`"h23"`, `"h24"`) should be used. `"h11"` and `"h23"` start with hour 0 and go up to 11 and 23 respectively. `"h12"` and `"h24"` start with hour 1 and go up to 12 and 24. [[HourCycle]] is only used when [[Hour]] is not *undefined*.</li>
       <li>[[Pattern]] is a String value as described in <emu-xref href="#sec-intl.datetimeformat-internal-slots"></emu-xref>.</li>
     </ul>
